fix: rtl horizontal scroll view

--- a/sites/public/pages/index.module.scss
+++ b/sites/public/pages/index.module.scss
@@ -7,7 +7,8 @@
   border-radius: 24px;
   color: #ffffff;
   height: 258px;
-  margin: 0 40px 0 0;
+  margin: 0px;
+  margin-inline-end: 40px;
   overflow: hidden;
   position: relative;
   width: 390px;
